--- a/apps/docs/content/docs/core/index.mdx
+++ b/apps/docs/content/docs/core/index.mdx
@@ -5,7 +5,8 @@ description: An open-source framework for evaluating and testing LLM application
 
 ## Introduction
 
-**Open Evals** is a comprehensive evaluation framework designed for testing and validating Large Language Model (LLM) applications. Built with TypeScript and full support for the Vercel AI SDK, it provides everything you need to ensure your AI applications work reliably in production.
+**Open Evals** is a comprehensive evaluation framework designed for testing and validating Large Language Model (LLM) applications.
+Built with TypeScript and full support for the Vercel AI SDK, it provides everything you need to ensure your AI applications work reliably in production.
 
 ## Key Features
 
@@ -21,6 +22,8 @@ Get started quickly with production-ready metrics:
 - **Factual Correctness** - Evaluate the factual accuracy of generated responses
 - **Custom Metrics** - Easily create your own domain-specific evaluation metrics
 
+<Callout>More metrics will be added in the future.</Callout>
+
 ### Synthetic Test Data Generation
 
 Generate realistic test datasets using:
@@ -28,13 +31,7 @@ Generate realistic test datasets using:
 - **Knowledge Graphs** - Build structured representations of your domain
 - **Personas** - Create diverse user profiles for comprehensive testing
 - **Scenarios** - Generate single-hop and multi-hop query scenarios
-- **Synthesizers** - Automatically generate test samples from your knowledge graph
-
-### RAG Utilities
-
-Essential tools for Retrieval-Augmented Generation workflows:
-
-- **Document chunking and splitting**
+- **Synthesizers** - Automatically generate test samples from your knowledge graph with personas and scenarios
 
 ## Getting Started
 
@@ -66,10 +63,5 @@ Open Evals is organized into focused packages:
 ## Why Open Evals?
 
 - **Type-Safe** - Built with TypeScript for best DX experience
-- **Modular** - Use only the packages you need
 - **AI SDK** - First-class support for AI SDKs
 - **Open Source** - Free to use and extend for any project
-
-## Next Steps
-
-Dive deeper into the documentation to learn how to use Open Evals in your projects.
