--- a/apps/docs/content/docs/generator/synthesis/multi-hop-specific.mdx
+++ b/apps/docs/content/docs/generator/synthesis/multi-hop-specific.mdx
@@ -36,6 +36,25 @@ const samples = await synthesize({
 })
 ```
 
+### Parameters
+
+import { TypeTable } from 'fumadocs-ui/components/type-table';
+
+<TypeTable
+  type={{
+    model: {
+      description: 'The language model to use for generating questions and answers',
+      type: 'LanguageModel',
+      required: true,
+    },
+    type: {
+      description: 'The type of synthesizer to create',
+      type: "'multi-hop-specific'",
+      required: true,
+    },
+  }}
+/>
+
 ## What Makes a Question "Multi-Hop Specific"?
 
 A question is multi-hop specific when it requires:
