--- a/apps/docs/content/docs/generator/synthesis/multi-hop-abstract.mdx
+++ b/apps/docs/content/docs/generator/synthesis/multi-hop-abstract.mdx
@@ -30,6 +30,25 @@ const samples = await synthesize({
 })
 ```
 
+### Parameters
+
+import { TypeTable } from 'fumadocs-ui/components/type-table';
+
+<TypeTable
+  type={{
+    model: {
+      description: 'The language model to use for generating questions and answers',
+      type: 'LanguageModel',
+      required: true,
+    },
+    type: {
+      description: 'The type of synthesizer to create',
+      type: "'multi-hop-abstract'",
+      required: true,
+    },
+  }}
+/>
+
 ## What Makes a Question "Multi-Hop"?
 
 A question is multi-hop when answering it requires retrieving and synthesizing information from **2 or more distinct context chunks** from your knowledge graph. Each "hop" represents retrieving information from a different node in the graph.
